--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3,6 +3,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   margin: 0;
+  text-align: center;
 }
 
 /* Set a background color */
